Fix z-index (??)

--- a/src/shared/less/main.less
+++ b/src/shared/less/main.less
@@ -484,6 +484,18 @@ md-card {
   min-height: 180px;
 }
 
+md-toolbar {
+  z-index: 2000;
+}
+
+.md-open-menu-container {
+  z-index: 2100;
+}
+
+.md-dialog-container {
+  z-index: 8000;
+}
+
 .md-toolbar-tools h2 {
   padding: 0;
   margin: 0;
